--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typed.js": "^2.0.6"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.1.0"
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^2.11.1"
   }
 }
